# STD

./: CMakeLists.txt  Makefile  pyproject.toml  setup.py
STD/: CMakeLists.txt
config/: config_kitti.yaml
cpp/: STDesc.cpp  STDesc.h
demo/: place_recognition_kitti.cpp
pybind/: CMakeLists.txt  stdesc.py  stdesc_pybind.cpp
python/: pipeline.py
python/config/: parser.py
python/datasets/: __init__.py
python/tools/: cmd.py  pipeline_results.py
stdesc/: pipeline.py
stdesc/config/: __init__.py  parser.py
stdesc/tools/: cmd.py  pipeline_results.py
